# qq-maid-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Makefile  README-dev.md  README.md  THIRD_PARTY-NOTICES.md  compose.console.yaml  compose.env.example  compose.onebot.yaml  compose.wechat.yaml  compose.yaml  github_mirror_auto.sh  qbot.sh
qq-maid-common/: Cargo.toml
qq-maid-common/src/: command_prefix.rs  http_client.rs  identity_context.rs  input_part.rs  lib.rs  managed_config.rs  markdown_strip.rs  output_part.rs  redaction.rs
qq-maid-common/src/markdown/: chat_text.rs  mod.rs  plain_text.rs  qq.rs  tests.rs
qq-maid-common/src/markdown_strip/: legacy_strip.rs  mod.rs  plain_text.rs  qq.rs  tests.rs
qq-maid-common/src/time_context/: date_range.rs  mod.rs  recurrence.rs  tests.rs  todo_time.rs
qq-maid-gateway-rs/: Cargo.toml  README.md
qq-maid-gateway-rs/src/: api.rs  auth.rs  lib.rs  main.rs  markdown.rs  media.rs  message_chunk.rs  render.rs  respond.rs
qq-maid-gateway-rs/src/api/: image.rs  member_detail.rs  mod.rs  response.rs  tests.rs
qq-maid-gateway-rs/src/app/: mod.rs
qq-maid-gateway-rs/src/config/: managed.rs  mod.rs  tests.rs
qq-maid-gateway-rs/src/gateway/: aggregator.rs  bot_identity.rs  c2c.rs  cache.rs  console.rs  dedupe.rs  dispatcher.rs  event.rs  group.rs  group_filter.rs  logging.rs  media_fetch.rs  mod.rs  outbound.rs  ping.rs  platform.rs  protocol.rs  push.rs  retry.rs  stream.rs  streaming.rs  test_support.rs  typing.rs  wechat_service.rs
src/: cli.rs  (+1 more)
(+692 files in other folders)
