[package]
name = "qq-maid-gateway-rs"
version = "0.1.10"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
aes = "0.9"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
cbc = { version = "0.2", features = ["alloc"] }
dotenvy = "0.15"
futures-util = "0.3"
fastrand = "2"
getrandom = "0.4"
qq-maid-core = { path = "../qq-maid-core" }
qq-maid-common = { path = "../qq-maid-common" }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.41.0"
sha1 = "0.11.0"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "test-util"] }
tokio-tungstenite = { version = "0.30", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
time = { version = "0.3", features = ["macros"] }
